frontend/src/components/SignUp/Register/Register.module.scss
.registerContainer {
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    opacity: 0;
    z-index: 1;
    transition: all 0.6s ease-in-out;

    @screen lg {
        top: 0;
        left: 0;
        position: absolute;
        width: 50%;
    }

    &.active {
        opacity: 1;
        z-index: 5;
        animation: show 0.6s;

        @screen lg {
            transform: translateX(100%);
        }
    }
}

@keyframes show {
    0%,
    49.99% {
        opacity: 0;
        z-index: 1;
    }

    50%,
    100% {
        opacity: 1;
        z-index: 5;
    }
}

